# ApplyPilot

./: .gitignore  README.md  launch_applypilot_ui.bat  launch_applypilot_ui.command  launch_applypilot_ui.ps1  pyproject.toml
control_center/: README.md  index.html  package-lock.json  package.json
control_center/server/: index.mjs  jobDiscovery.mjs
control_center/src/: App.css  App.jsx  index.css
control_center/src/data/: applications.js  jobs.js  profiles.js
control_center/src/lib/: agent.js  discovery.js  matcher.js
src/applypilot/: cli.py  config.py  llm.py
src/applypilot/apply/: codex_runner.py  launcher.py  prompt.py
src/applypilot/discovery/: jobspy.py
src/applypilot/wizard/: init.py
